# RAG-MCP-SERVER

./: .gitignore  DASHBOARD_REVIEW.md  DEV_SPEC.md  README.md  USAGE_GUIDE.md  main.py  pyproject.toml
.claude/: settings.local.json
config/: settings.yaml
config/prompts/: chunk_refinement.txt  image_captioning.txt  metadata_enrichment.txt  rerank.txt
docs/: cleanup_temp_records.md
scripts/: cleanup_temp_records.py  evaluate.py  ingest.py  query.py  start_dashboard.py
src/: config.yaml.example
src/core/: __init__.py  settings.py  types.py
src/ingestion/: __init__.py  document_manager.py  pipeline.py
src/libs/: __init__.py
src/mcp_server/: protocol_handler.py  server.py
src/observability/: __init__.py  logger.py
tests/e2e/: E2E_VERIFICATION_REPORT.md  test_dashboard_smoke.py  test_data_ingestion.py  test_mcp_client.py  test_recall.py
tests/fixtures/: golden_test_set.json  noisy_chunks.json
tests/integration/: test_chroma_store_roundtrip.py  test_chunk_refiner_llm.py  test_hybrid_search.py  test_ingestion_pipeline.py  test_mcp_server.py  test_pipeline_e2e.py  test_reranker_integration.py
tests/unit/: test_azure_embedding.py  test_azure_vision_llm.py  test_batch_processor.py  test_bm25_indexer_roundtrip.py  test_chunk_refiner.py  test_citation_generator.py  test_composite_evaluator.py  test_config_loading.py  test_core_types.py  test_cross_encoder_reranker.py  test_custom_evaluator.py  test_data_service.py  test_dense_encoder.py  test_dense_retriever.py  test_document_chunker.py  test_document_manager.py  test_eval_runner.py  test_file_integrity.py  (+30 more)
(+91 files in other folders)
