[project]
name = "mcp-server"
version = "0.1.0"

description = "Modular RAG MCP Server"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "-q"]
testpaths = [
  "tests/unit",
  "tests/integration"
]
markers = [
  "unit: unit tests (default)",
  "integration: integration tests"
]
pythonpath = ["."]